<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="650dp"
    android:background="@drawable/wallpaperorange"
    tools:context="com.example.mecorp.holamyfriend.Registro">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="252dp"
                android:layout_height="56dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:background="#b0ffffff"
                android:orientation="vertical"
                android:scrollbarAlwaysDrawVerticalTrack="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="REGISTRO"
                    android:textAlignment="center"
                    android:textColor="#E64A19"
                    android:textSize="40dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/TilLogin"
                android:layout_width="290dp"
                android:layout_height="80dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="#b0ffffff"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="MissingConstraints">

                <EditText
                    android:id="@+id/ETxtLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/loginHint"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/TilPassword"
                android:layout_width="290dp"
                android:layout_height="80dp"
                android:layout_marginBottom="180dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="#b0ffffff"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TilLogin"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="MissingConstraints">

                <EditText
                    android:id="@+id/ETxtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/passwordHint"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/TilPasswordRepeat"
                android:layout_width="290dp"
                android:layout_height="80dp"
                android:layout_marginBottom="180dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="#b0ffffff"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TilPassword"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="MissingConstraints">

                <EditText
                    android:id="@+id/ETxtPasswordRepeat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/passwordRepeatHint"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/TilMovilPhone"
                android:layout_width="290dp"
                android:layout_height="60dp"
                android:layout_marginBottom="180dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="#b0ffffff"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TilPasswordRepeat"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="MissingConstraints">

                <EditText
                    android:id="@+id/ETxtMovilPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/movilPhoneHint"
                    android:inputType="phone"
                    android:maxLength="9" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/TilName"
                android:layout_width="290dp"
                android:layout_height="60dp"
                android:layout_marginBottom="180dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="#b0ffffff"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TilMovilPhone"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="MissingConstraints">

                <EditText
                    android:id="@+id/ETxtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nameHint"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/TilSurname"
                android:layout_width="290dp"
                android:layout_height="60dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="#b0ffffff"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TilName"
                app:layout_constraintVertical_bias="0.01"
                tools:ignore="MissingConstraints">

                <EditText
                    android:id="@+id/ETxtSurname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/surnameHint"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/tilState"
            android:layout_width="wrap_content"
            android:layout_height="117dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="#b0ffffff"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TilSurname"
            tools:ignore="MissingConstraints">


            <TextView
                android:id="@+id/ETxtState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/stateHint"
                android:textAlignment="center"
                android:textSize="20dp"
                app:layout_constraintBottom_toTopOf="@+id/radioGroup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="74dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.507"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0">

                <RadioButton
                    android:id="@+id/bSoltero"
                    android:layout_width="145dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:text="Soltero"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/bCasado"
                    android:layout_width="145dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:text="Casado"
                    android:textSize="20dp"
                    android:textStyle="bold" />
            </RadioGroup>
        </android.support.constraint.ConstraintLayout>

            <Button
                android:id="@+id/salir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="SALIR"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.10"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilState"
                app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/paso2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="368dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:text="PASO2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.90"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilState"
            app:layout_constraintVertical_bias="0.0" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>

</android.support.constraint.ConstraintLayout>