<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaperorange"
    tools:context="com.example.mecorp.holamyfriend.Registro2">

    <LinearLayout
        android:id="@+id/Registro2"
        android:layout_width="252dp"
        android:layout_height="56dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="#b0ffffff"
        android:orientation="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="REGISTRO"
            android:textAlignment="center"
            android:textColor="#E64A19"
            android:textSize="40dp"
            android:textStyle="bold" />
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/TilFavFood"
        android:layout_width="290dp"
        android:layout_height="80dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="#b0ffffff"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Registro2"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/ETxtFavFood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/favFoodHint"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/TilFavIngredient"
        android:layout_width="290dp"
        android:layout_height="80dp"
        android:layout_marginBottom="180dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="#b0ffffff"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TilFavFood"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/ETxtIngredient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/favIngredientHint"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/TilFavDrink"
        android:layout_width="290dp"
        android:layout_height="80dp"
        android:layout_marginBottom="180dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="#b0ffffff"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TilFavIngredient"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/ETxtFavDrink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/favDrinkHint"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/tilFoodType"
        android:layout_width="wrap_content"
        android:layout_height="117dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="#b0ffffff"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TilFavDrink"
        app:layout_constraintVertical_bias="0.073"
        tools:ignore="MissingConstraints">


        <TextView
            android:id="@+id/ETxtFoodType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/foodTypeHint"
            android:textAlignment="center"
            android:textSize="20dp"
            app:layout_constraintBottom_toTopOf="@+id/radioGroup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="74dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <RadioButton
                android:id="@+id/bNoPicante"
                android:layout_width="145dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="No Picante"
                android:textSize="20dp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/bPicante"
                android:layout_width="145dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="Picante"
                android:textSize="20dp"
                android:textStyle="bold" />
        </RadioGroup>
    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/salir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="SALIR"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilFoodType"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/registrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="Registrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilFoodType"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>
